--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,6 @@ target_include_directories(text_lib
   PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
   )
+
+add_executable(veem veem.cc)
+target_link_libraries(veem -lncurses)
